[gd_scene load_steps=5 format=3 uid="uid://b50ql2p2uq8a4"]

[ext_resource type="Script" uid="uid://b2g8r6181fa27" path="res://ui/cookie_loot_panel.gd" id="1_pt25v"]
[ext_resource type="PackedScene" uid="uid://dimiwi1v37iya" path="res://ui/inventory/inventory_cookie_slot.tscn" id="2_pt25v"]
[ext_resource type="FontFile" uid="uid://c5qw4j6h2tlna" path="res://ui/fonts/fusion-pixel-10px-proportional-sc-latin-400-normal.woff2" id="2_tnmfe"]

[sub_resource type="LabelSettings" id="LabelSettings_q72pw"]
font = ExtResource("2_tnmfe")
font_size = 80

[node name="ChooseCookiePanel" type="PanelContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -888.0
offset_top = -293.0
offset_right = -70.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pt25v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose your cookie"
label_settings = SubResource("LabelSettings_q72pw")

[node name="ChoicesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 48

[node name="CookieChoiceButton1" type="Button" parent="MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(210, 270)
layout_mode = 2
flat = true

[node name="InventoryCookieSlot" parent="MarginContainer/VBoxContainer/ChoicesContainer/CookieChoiceButton1" instance=ExtResource("2_pt25v")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
cookie_id = 1

[node name="CookieChoiceButton2" type="Button" parent="MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(210, 270)
layout_mode = 2
flat = true

[node name="InventoryCookieSlot" parent="MarginContainer/VBoxContainer/ChoicesContainer/CookieChoiceButton2" instance=ExtResource("2_pt25v")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
cookie_id = 2

[node name="CookieChoiceButton3" type="Button" parent="MarginContainer/VBoxContainer/ChoicesContainer"]
custom_minimum_size = Vector2(210, 270)
layout_mode = 2
flat = true

[node name="InventoryCookieSlot" parent="MarginContainer/VBoxContainer/ChoicesContainer/CookieChoiceButton3" instance=ExtResource("2_pt25v")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
cookie_id = 3

[node name="FinishLootingButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "finish looting"

[connection signal="pressed" from="MarginContainer/VBoxContainer/FinishLootingButton" to="." method="_on_finish_looting_button_pressed"]
